--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Nintendo Blocks To MB Converter</title>
         <link rel="shortcut icon" href="favicon.ico" />
         <link rel="apple-touch-icon" href="favicon.ico" />
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Nintendo Blocks To MB Converter</h1>
