--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
         <title>Nintendo Blocks To MB Converter</title>
         <link rel="shortcut icon" href="favicon.ico" />
         <link rel="apple-touch-icon" href="favicon.ico" />
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
     <body>
-        <h1>Nintendo Blocks To MB Converter</h1>
+        <div id="title">
+            <h1>Nintendo Blocks To MB Converter</h1>
+        </div>
+        <div id="input">
+            <input type="number" value="Enter Blocks:">
+        </div>
     </body>
 </html>
