Major Changes and yes im still working on it

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
             <h1>Nintendo Blocks To MB Converter</h1>
         </div>
         <div id="input">
-            <input type="number" value="Enter Blocks:">
+            <label for="numBlocks">Enter Blocks:</label>
+            <input type="number" id="numBlocks" name="numBlocks">
         </div>
     </body>
 </html>
