--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel="shortcut icon" href="favicon.ico" />
         <link rel="apple-touch-icon" href="favicon.ico" />
         <link rel="stylesheet" type="text/css" href="style.css" />
+        <script src="script.js"></script>
     </head>
     <body>
         <div id="title">
@@ -13,6 +14,9 @@
         <div id="input">
             <label for="numBlocks">Enter Blocks:</label>
             <input type="number" id="numBlocks" name="numBlocks">
+        </div>
+        <div id="output">
+            <output name=numMb for="numBlocks" output>
         </div>
     </body>
 </html>
